--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -1,4 +1,5 @@
 src_files:
+  - "spec/javascripts/support/jquery-1.7.1.min.js"
   - "vendor/**/*.{js,coffee}"
   - "lib/**/*.{js,coffee}"
   - "app/**/*.{js,coffee}"
