Added the span.fatpopcorn_grip only if it doesn't exist

--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -10,7 +10,7 @@ stylesheets:
   - "app/**/*.css"
 
 helpers:
-  - "helpers/**/*.{js,coffee}"
+  - "helpers/**/*.{js,coffee,html}"
 
 spec_files:
   - "**/*[Ss]pec.{js,coffee}"
