--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -2,7 +2,9 @@ src_files:
   - "spec/javascripts/support/jquery-1.7.1.min.js"
   - "vendor/**/*.{js,coffee}"
   - "lib/**/*.{js,coffee}"
-  - "app/**/*.{js,coffee}"
+  - "app/**/fileuploader.js"
+  - "app/**/popcorn.js"
+  - "app/**/activemetadata.js"
 
 stylesheets:
   - "vendor/**/*.css"
