--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-.bundle/
-log/*.log
-pkg/
-spec/dummy/db/*.sqlite3
-spec/dummy/log/*.log
-spec/dummy/tmp/
-spec/dummy/.sass-cachei
-Gemfile.lock
 *.iml
+log/
+pkg/
+.bundle/
+spec/dummy/db/
+spec/dummy/log/
+spec/dummy/tmp/
+spec/dummy/.sass-cache
